installation Successfully of teh package.bat file